# star-rail-pet

./: .gitignore  README.md  environment.yml  preview_skeleton.py  preview_spine_character.py  pyproject.toml  requirements.txt  spine_anim_sample.py
assets/: README.txt
assets/argenti/: 1302.1a88ff13_ske.json  银枝.spine
docs/: Python导读.md  Tauri端导读.md  agent协同开发对话纪要.md  交互与表情仲裁设计.md  交互进阶规划摘要.md  前端模块拆分与交互落地规划.md  对话暂存.md  技术文档.md  新手导读.md  架构规划.md
pet-web/: .gitignore  README.md  index.html  package-lock.json  package.json
pet-web/public/argenti/: 1302.1a88ff13.json  1302.atlas
pet-web/scripts/: sync-assets.mjs
pet-web/src/: main.ts  style.css
pet-web/src-tauri/: tauri.conf.json
pet-web/src-tauri/capabilities/: default.json
pet-web/src-tauri/icons/: icon.icns
pet-web/src/app/: domTemplate.ts  refs.ts
pet-web/src/pomodoro/: panel.ts  runtime.ts
pet-web/src/spine/: assets.ts  camera.ts  canvasApp.ts  hitTest.ts
pet-web/src/tauri/: env.ts  pointerLoop.ts  pointerPassthrough.ts  windowChrome.ts
pet-web/src/ui/: contextMenu.ts  gaze.ts  speechBubble.ts
pet-web/src/utils/: math.ts
src/star_rail_pet/: __init__.py  __main__.py  preview_entry.py
src/star_rail_pet/anim/: __init__.py  sample.py
src/star_rail_pet/preview/: __init__.py
src/star_rail_pet/render/: __init__.py  gl_preview.py
src/star_rail_pet/spine/: __init__.py  atlas.py  bones.py  constraints.py  draw.py  mesh_scene.py
tools/: preview_spine_character.py
